outputs_20260328-195923-f8117447/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_k8vau82p\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_k8vau82p\src\gtm_tom_3_phase_inverter_pwm.c:144:24: error: assignment to 'IfxGtm_Pwm_callBack' {aka 'void (*)(void)'} from incompatible pointer type 'void (*)(void *)' [-Wincompatible-pointer-types]
  144 |     irqCfg.periodEvent = IfxGtm_periodEventFunction;   /* callback */
      |                        ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_k8vau82p\src\gtm_tom_3_phase_inverter_pwm.c:82:6: note: 'IfxGtm_periodEventFunction' declared here
   82 | void IfxGtm_periodEventFunction(void *data)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_k8vau82p\src\gtm_tom_3_phase_inverter_pwm.c:22:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_k8vau82p\include/IfxGtm_Pwm.h:19:16: note: 'IfxGtm_Pwm_callBack' declared here
   19 | typedef void (*IfxGtm_Pwm_callBack)(void);
      |                ^~~~~~~~~~~~~~~~~~~
